--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://database-1.cb2eogq4couc.ap-south-1.rds.amazonaws.com:3306/accounts?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 jdbc.username=admin
-jdbc.password=G6cUcU9qUIMpFbBAcDOs
+jdbc.password=admin123
 
 #Memcached Configuration For Active and StandBy Host
 #For Active Host
